<b>2009-04-23</b>

* Bug: Links from Facebook with "?ref=nf" added to end now work

<b>2009-03-26</b>

* Segments by train, road or sea added (2509953)
* Extra filter option "mode" added
* Added pie chart of travel modes to Analyze
* Unknown airlines and other carriers can now pop up Add New dialog
* KML now implements directory hierarchy and color-codes segments based on mode
* Replaced clunky JS pie chart code with Google Charts API
* Airline search test cases added
* Autocomplete airline test cases added
* Bug: Better handling of blanked airport, airline names
* Bug: Adding airlines with long names now updates select
* Bug: Duration of "0:60" now rendered correctly as "1:00"

<b>2009-03-19</b>

* Bug: Restore textbox class correctly after hint text restoration

<b>2009-03-04</b>

* Top 10 allows sorting by flight count or distance (2168185)
* Top 10 can also show top 20, 50 flights (2495106)
* Top 10 CSS rewritten (use padding instead of border-spacing), works better on IE
* Top 10 test cases added

<b>2009-03-02</b>

* Facebook: "Today" flights posted earlier, at 01:00 EST
* Facebook: Multiple "today" flights can be posted

<b>2009-02-27</b>

* Facebook app can now post update on flight day
* Preferences added to Facebook app
* Tooltips added to OpenLayers map controls
* Bug: Flight edits no longer show up on Facebook, stats

<b>2009-02-23</b>

* Bug: Calculate PHP GC distance correctly for flights where src==dest

<b>2009-02-23</b>

* KML exports (Google Earth etc) added!
* Wrote 3D path code in php/greatcircle.php
* Bug: Filters for CSV exports fixed

<b>2009-02-22</b>

* "Analyze" now includes count of countries, avg length, duration
* php/stats.php partly JSON-ified
* "Trip" filter prominence reduced
* Clearer "Help" icons
* "X" icon now OpenFlights Purple(tm)

<b>2009-02-09</b>

* Facebook app now includes a map of flights
* Bug: Facebook updates show airports in correct order

<b>2009-02-06</b>

* GAD replaced with OurAirports